kustomize/base/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: homelab
  labels:
    app: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 5230
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
          readinessProbe:
            exec:
              command: ["nc", "-vz", "127.0.0.1", "5230"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
